--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -2,22 +2,28 @@
   background-position: 50% 50%;
   background-size: cover;
   padding: 100px;
-  color: white;
+  color:black;
   margin-bottom: 40px;
-  text-shadow:0 0 4px black;
-  height: 300px;
-}
-.banner h1, .banner p{
-  margin: 0;
+  text-shadow:0 0 4px gray;
+  object-fit: cover;
+  height: 500px;
+
 }
 .banner p{
-  margin-bottom: 25px;
+  margin-bottom: 35px;
+  margin-top: 50px;
+  font-size: 18px;
+}
+.banner h1{
+  margin-top: 100px;
+  font-size: 36px;
+  letter-spacing: 2px;
 }
 
 .banner a{
-  color: white;
+  color:lightskyblue;
 }
 .banner:hover{
   box-shadow:  0 0 20px black;
-  color:gray;
+  color:lightgray;
 }
