--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,10 +1,18 @@
 .btn-banner{
-  border-radius: 50px;
-  background-color: #00ff6a;
-  padding: 12px 20px;
-  transition: 1s;
-  border: 2px solid green;
+  position: relative;
+  background: hsl(185, 69%, 22%);
+  border: none;
+  color: rgb(9, 59, 71);
+  padding: 15px 25px;
+  box-shadow: -6px 6px 0 rgb(106, 108, 109);
+  outline: none;
+  margin-left: 25px;
+  border-radius: 4px;
 }
 .btn-banner:hover{
- background-color: pink;
+  background: rgb(64, 217, 222);
+  top: 3px;
+  left: -3px;
+  box-shadow: -3px 3px 0 hsl(207, 28%, 60%);
+  color: black;
 }
