--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -4,16 +4,15 @@
   background-color: white;
 }
 .card{
-  width: 180px;
   border-radius: 4px;
   border: 2px solid lightgray;
   box-shadow: 0 0 3 gray;
   text-align: center;
   padding: 20px;
-  margin-right: 15px;
+  margin-right: 30px;
 }
 .card:hover{
-  box-shadow:  0 0 20px black;
+  box-shadow:0 0 20px rgb(44, 42, 42);
   color:gray;
 }
 
