--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,30 +1,31 @@
 .footer{
   text-align: center;
   padding: 60px;
-  background-color: black;
+  background-color:rgb(149, 202, 226);
   margin-top: 20px;
   background-position: 50% 50%;
   background-size: cover;
   height: 250px;
+
 }
 .footer li{
  display: inline;
  padding: 0px 10px;
 }
 .footer a{
-  color: green;
+  color: black;
   font-size: 50px;
   margin:0 4px;
-  background-color: black;
+  background-color: rgb(149, 202, 226);
 }
 .footer a:hover{
- color: rgb(146, 206, 183);
+ color: rgb(64, 217, 222);
  transition: 1s;
 }
 .footer p{
-color: white;
+color: black;
 text-align: center;
-font-size: 16px;
+font-size: 20px;
 }
 .footer:hover{
   box-shadow:  0 0 20px black;
